EVA-112 Feat: Se edita el template de crear-editar colaborador para configurar las rutas del wizard.

--- a/TalentoHumano/templates/TalentoHumano/Colaboradores/crear-editar.html
+++ b/TalentoHumano/templates/TalentoHumano/Colaboradores/crear-editar.html
@@ -282,8 +282,9 @@
     <script src="{% static 'EVA/Plantilla/js/formplugins/bootstrap-datepicker/bootstrap-datepicker.js' %}"></script>
     <script src="{% static 'TalentoHumano/js/date_picker.js' %}"></script>
     <script src="{% static 'EVA/Plantilla/js/formplugins/smartwizard/smartwizard.js' %}"></script>
-    <script src="{% static 'TalentoHumano/js/wizard.js' %}"></script>
+    <script src="{% static 'EVA/Plantilla/js/smart-wizard/wizard.js' %}"></script>
     <script src="{% static 'EVA/Plantilla/js/custom/modificacionesSelect2.js' %}"></script>
     <script src="{% static 'TalentoHumano/js/selectMultipleContratos.js' %}"></script>
     <script src="{% static 'TalentoHumano/js/selectMultipleGruposPermisos.js' %}"></script>
+    <script src="{% static 'TalentoHumano/js/controlWizardForm.js' %}"></script>
 {% endblock scripts%}
