EVA-112 Feat: Se crean los inputs en el crear-editar de contratos para guardar los registros de vigencias y garantías

--- a/Proyectos/templates/Proyectos/Contrato/crear-editar.html
+++ b/Proyectos/templates/Proyectos/Contrato/crear-editar.html
@@ -45,6 +45,8 @@
                                                 <form action="{% url 'Proyectos:contratos-crear' %}" id="contrato-form" method="post" enctype="multipart/form-data" class="needs-validation" novalidate>
                                             {% endif %}
                                             {% csrf_token %}
+                                            <input hidden id="datos_vigencias" name="datos_vigencias">
+                                            <input hidden id="datos_garantias" name="datos_garantias">
                                             <div id="smartwizard">
                                                 <ul>
                                                     <li><a href="#step-1">Información básica</a></li>
