--- a/Proyectos/templates/Proyectos/Contrato/crear-editar.html
+++ b/Proyectos/templates/Proyectos/Contrato/crear-editar.html
@@ -166,13 +166,13 @@
                                                                     <div class="col-md-6">
                                                                         {% select_tag formas_de_pago 'forma_de_pago_id' 'Seleccione la forma de pago' texto_label="Forma de Pago" required="" value=contrato.forma_de_pago_id  mensaje_validacion='Por favor seleccione una forma de pago' invalido=errores.forma_de_pago %}
                                                                     </div>
-                                                                    <div class="col-md-2">
+                                                                    <div class="col-md-2" id="div_anticipo">
                                                                         {% input_number_tag 'anticipo' 'Anticipo' placeholder="Porcentaje"  min='0' max="100" step="0.01" onInput="validarLongitud(3,this)" required="" value=contrato.anticipo mensaje_validacion='Por favor ingrese el porcentaje' invalido=errores.anticipo %}
                                                                     </div>
-                                                                    <div class="col-md-2">
+                                                                    <div class="col-md-2" id="div_actas_parciales">
                                                                         {% input_number_tag 'actas_parciales' 'Actas Parciales' placeholder="Porcentaje"  min='0' max="100" step="0.01" onInput="validarLongitud(3,this)" required="" value=contrato.acta_parcial mensaje_validacion='Por favor ingrese el porcentaje' invalido=errores.actas_parciales %}
                                                                     </div>
-                                                                    <div class="col-md-2">
+                                                                    <div class="col-md-2" id="div_liquidacion">
                                                                         {% input_number_tag 'liquidacion' 'Liquidación' placeholder="Porcentaje"  min='0' max="100" step="0.01" onInput="validarLongitud(3,this)" required="" value=contrato.liquidacion mensaje_validacion='Por favor ingrese el porcentaje' invalido=errores.liquidacion %}
                                                                     </div>
                                                                 </div>
