EVA-112 Feat: Se crea un input en el template de crear-editar contratos para guardar los valores de las vigencias al editar.

--- a/Proyectos/templates/Proyectos/Contrato/crear-editar.html
+++ b/Proyectos/templates/Proyectos/Contrato/crear-editar.html
@@ -46,6 +46,7 @@
                                             {% endif %}
                                             {% csrf_token %}
                                             <input hidden id="datos_vigencias" name="datos_vigencias">
+                                            <input hidden id="valores_vigencias_actuales" value="{{ valores_vigencias_actuales }}">
                                             <input hidden id="datos_garantias" name="datos_garantias">
                                             <input hidden id="tipos_contrato" value="{{ tipos_contrato_json }}">
                                             <input hidden id="selecciones_pdm" value="{{ selecciones_pdm }}">
