EVA-112 Feat: Se le configura el valor a los inputs que recepcionan los valores seleccionados en supervisores e interventores.

--- a/Proyectos/templates/Proyectos/Contrato/crear-editar.html
+++ b/Proyectos/templates/Proyectos/Contrato/crear-editar.html
@@ -209,7 +209,7 @@
                                                     </div>
                                                     <div id="step-3" class="">
                                                         <div id="form-step-2" data-toggle="validator">
-                                                            <input hidden id="valores_supervisores" value="">
+                                                            <input hidden id="valores_supervisores" value="{{ selecciones_supervisores }}">
                                                             <div class="form-group">
                                                                 <div class="form-row">
                                                                     <div class="col-md-12">
@@ -217,7 +217,7 @@
                                                                     </div>
                                                                 </div>
                                                             </div>
-                                                            <input hidden id="valores_interventores" value="">
+                                                            <input hidden id="valores_interventores" value="{{ selecciones_interventores }}">
                                                             <div class="form-group">
                                                                 <div class="form-row">
                                                                     <div class="col-md-12">
